update version number for new core version.