@@ -2,6 +2,7 @@ package com.codingchili.instance.scripting;
 
 import com.esotericsoftware.reflectasm.ConstructorAccess;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
@@ -11,7 +12,7 @@ import com.codingchili.core.logging.Level;
 
 /**
  * @author Robin Duda
- *
+ * <p>
  * A 'script' implementation that is written in java.
  */
 public class NativeScript implements Scripted {
@@ -21,6 +22,7 @@ public class NativeScript implements Scripted {
 
     /**
      * For native scripts the source is the class to execute.
+     *
      * @param className the name of the class to call.
      */
     public NativeScript(String className) {
@@ -32,9 +34,10 @@ public class NativeScript implements Scripted {
     private Function<Bindings, ?> loadScript(String className) {
         try {
             Class<Function<Bindings, ?>> theClass = (Class<Function<Bindings, ?>>) Class.forName(className);
-            ConstructorAccess<Function<Bindings, ?>> access = ConstructorAccess.get(theClass);
-            return access.newInstance();
-        } catch (ClassNotFoundException e) {
+            return theClass.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException
+                | InstantiationException | ClassNotFoundException e) {
+
             throw new CoreRuntimeException(e.getMessage());
         }
     }
